--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Elizabeth Safar - College Counselor</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Elizabeth Safar</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/elizabethsafar.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,29 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Elizabeth Safar
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Education📚</div>
+        <p class="lead mb-4">Hello, my name is Elizabeth Safar. I am currently completing my undergraduate degree at the University of California, Riverside. I am an Education major, and I am very passionate about the subject. My commitment to being an advocate and leader in the field of education began in high school, where I got to some volunteer work with the LGBTQ+ community. Meeting homeless youth, helping them on their journey of finding home, happiness, and stability, showed me that my path in life involves helping people reach their fullest potential. I love working with groups, and I thrive in environments where interacting with people is required.
+<br><br>
 
-        Enter bio here<br><br>
+        I am very well organized, goal-oriented and I always keep leading by example in mind. I am a community college transfer student, and I worked several jobs while completing my transfer credits, an experience that has prepared me for working hard and maintaining a work life balance. My multiple sales jobs, and working for large companies with high expectations has prepared me to handle even the toughest and diffuse those situations with kindness and care. My volunteer work with the LGBTQ+ Homeless shelter taught me compassion and how to communicate with trauma informed care in mind. I believe that this level of care is crucial to having meaningful and successful interactions with people in general, but is especially important when dealing with students. In addition to working, maintaining a full time schedule, and mentoring my siblings who are now on their way to matriculating from community colleges to universities. 
+<br><br>
 
-        Enter bio here
+        I also volunteering with my former community college, shadowing and helping with the very program that helped me gain a strong footing in education and is responsible for my success thus far, the FYE (First year experience) program. Giving back and helping students with their academic journey is absolute joy and honor that consistently helps me reaffirm that I am on the right path. I hope to soon help students out with their college journey weather that is in a 2-year community college or a 4-year university, everyone has their own experience and I hope to make it easier for them. Doing a lot for my community especially for first-generation students and being more diverse because they are the most targeted group to help especially first-generation students because they do not have enough information or resources to apply to college or know how to apply. Having all my skill and experience will help me get to where I want to be which is a person who helps students in a diverse community to get to their dreams and success. It is an accomplishment to know that you have the information and resources and not feeling lost in the system and knowing people care enough to help you go through college. I am not a first-generation student but I do have many friends who are and using the knowledge I know by my siblings helping me and then helping m friends who do not have the resource feels amazing.
+
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/elizabeth-safar-875042188/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/elizabethsafar">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/SafarElizabeth">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:esafa001@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +95,53 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Front Desk Agent </h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://lalgbtcenter.org/">Los Angeles LGBTQ Center</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Served meals to the residents<br> 
+              • Checked and put away all the residents bags every morning<br>
+              • Helped manage activities including maintain the theatre space<br>
+              • Managed the front desk and checked residents in and out. 
+<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">January 2016 - June 2016</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">FYE Administrative Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.lacitycollege.edu/">Los Angeles City College</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Handled appointment management using SARS<br>
+              • Assisted with registration training<br>
+              • Completed data-entry and management<br>
+              • Mentored incoming students alongside counselors<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2019 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Usher</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.dolbytheatre.com/">Dolby Theatre</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Responsible for running a register<br>
+            • Changing tills, tallying daily income deposits<br>
+            • Managed customer service relations<br>
+            • Designed displays and maintained store organization<br>
+            • Solicited the sale of merchandise through demonstrations and suggestive selling.<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2018 - Present</span>
           </div>
         </div>
 
@@ -151,34 +159,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Los Angeles City College</h3>
+            <div class="subheading mb-3">General Education Requirements</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2016 - June 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Bachelors Degree in Education</div>
+            <div>Education, Society, and Human Development Concentration: Community Leadership, Policy, and Social Justice</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2018 - June 2020</span>
           </div>
         </div>
 
@@ -191,15 +188,22 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/pic1.jpg" width="500px">
+            <img src="img/pic2.jpg" width="500px"><br>
+            <img src="img/pic3.jpg" width="500px">
+            <img src="img/pic4.jpg" width="500px"><br>
+            <img src="img/pic5.jpg" width="500px">
+            <img src="img/pic6.jpg" width="500px"><br>
         </center>
       </div>
     </section>
+    
+    
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Elizabeth Safar</center><br>
 
 
   </div>
